fix(demo.css): set max-width for textarea to prevent overflow

--- a/packages/.vitepress/theme/styles/demo.css
+++ b/packages/.vitepress/theme/styles/demo.css
@@ -197,6 +197,7 @@
     white-space: pre;
     overflow-wrap: normal;
     overflow: hidden;
+    max-width: 100%;
   }
 
   .float {
